# convert-heic-to-jpeg

./: .gitignore  Makefile  README.md  convert.py  env.example  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  sync.py  tasks.py  textract.py
src/idp_fuel_tracker/: __init__.py  __main__.py  convert.py  image_utils.py  s3.py  sync.py  textract.py
